--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http": "0.0.1-security",
     "jquery": "^3.6.0",
     "jquery.easing": "^1.4.1",
+    "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
     "util": "^0.12.4",
     "vue": "^2.6.11",
